fixed message and spacing of components

--- a/src/pages/AboutPage/components/Contact/contact.module.css
+++ b/src/pages/AboutPage/components/Contact/contact.module.css
@@ -18,7 +18,7 @@
 
 .contactContainer {
     width: 100%;
-    height: 120vh;
+    height: 160vh;
     background-image: url("@assets/commonRoom.JPG"); 
     background-size:cover;
     background-position: center; 
